Fix image stretching

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -18,6 +18,7 @@
   display: flex;
   margin: 0 20px;
   padding: 20px;
+  align-items: center;
 }
 
 .project .info {
